--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>  <!-- Declara que o documento será um html-->
+<html lang="en"> <!-- Declara que a programação será feita em inglês-->
 <head>
-    <meta charset="UTF-8">
-    <meta name ="viewport" content="with=device-width, initial-scale=1.0">
-    <tile>Curso de javascript</tile>
-    <script src="./aula.js"></script>
+    <meta charset="UTF-8"> <!-- Indica que a codificação dos caracteres terão os formatos em UTF-8-->
+    <meta name ="viewport" content="with=device-width, initial-scale=1.0"> <!-- Aqui é declarado que idependente do dispositivo, o conteúdo da página será redimensionado -->
+    <tile>Curso de javascript</tile> <!-- Define o título da página -->
+    <script src="./aula.js"></script> <!-- importa o arquivo que contém os scripts de comando -->
 </head>
 <body>
     <h1>Dev Aprender</h1>
