Aula sobre variáveis e como mostrá-las no console

--- a/home.html
+++ b/home.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>  <!-- Declara que o documento será um html-->
-<html lang="en"> <!-- Declara que a programação será feita em inglês-->
+<!DOCTYPE html> <!-- Declara que o documento será um html-->
+<html lang="en">
 <head>
-    <meta charset="UTF-8"> <!-- Indica que a codificação dos caracteres terão os formatos em UTF-8-->
-    <meta name ="viewport" content="with=device-width, initial-scale=1.0"> <!-- Aqui é declarado que idependente do dispositivo, o conteúdo da página será redimensionado -->
-    <tile>Curso de javascript</tile> <!-- Define o título da página -->
-    <script src="./aula.js"></script> <!-- importa o arquivo que contém os scripts de comando -->
+    <meta charset="UTF-8">
+    <meta name ="viewport" content="with=device-width, initial-scale=1.0">
+    <tile>javascript course</tile>
+    <script src="./scripts.js"></script>
 </head>
 <body>
-    <h1>Dev Aprender</h1>
+    <h1>Studing</h1>
 </body>
 </html>
