--- a/Aula - HTML e CSS (muito basico)/html.html
+++ b/Aula - HTML e CSS (muito basico)/html.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <htmml>
     <head>
-        <link rel="stylesheet" href="css.css">
+        <link rel="stylesheet" href="css.css"> <!--Para ligarmos o documento HTML com o documento CSS, 
+                                                    usamos a tag <link>.-->
+                                                    
         <title> My web page </title>
     </head>
     <body>
-        <h1 id=titulo > You are create you first html! </h1>
-        <p class="principal"> Hello World </p>
+        <h1 id=titulo > You are create you first html! </h1> <!--Outra forma de seletor que podemos usar é o ID, 
+                                                                porém o ID pode ser usado uma única vez para um 
+                                                                parágrafo, ele não pode ser usado para outro elemento--> 
+
+        <p class="principal"> Hello World </p> <!--usado para especificar o estilo do texto no parágrafo.  Se eu quiser 
+                                                     que somente um parágrafo tenha um destaque ou layout diferente,
+                                                     nós atribuímos classes ao <p>-->
         <button>Press here!</button>
     </body>
 </htmml>
