--- a/basic-tools/Combo-box.html
+++ b/basic-tools/Combo-box.html
@@ -7,7 +7,7 @@
     </head>
 <!-------------------------------------------------Body---------------------------------------------------------------->        
     <body>
-        <form =action="index.html" method="get">
+        <form =action="Combo-box.html" method="get">
             <label for="service"> Escolha uma opção da lista: </label>
                 <input class="Services" list="Servicos" name="service" id="service">
                 <datalist id="Servicos">
